--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -29,6 +29,7 @@ editor_options:
 # Simulation results
   * [Simulation results](simulation_summary.html)
   * [Simulation null weight results](simulation_null_weight_summary.html)
+  * [Simulation Param PIPs](simulation_param_PIPs.html)
   
 # Real data application
 
