--- a/analysis/simulation_null_weight_summary.Rmd
+++ b/analysis/simulation_null_weight_summary.Rmd
@@ -54,28 +54,28 @@ get_plot <- function(ctwas_param,susie_param,true_value,title_name){
 
 plot_PIP_ctwas <- function(results_dir, runtag,  simutags, ...){
   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-  susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.true_parameter.","ctwas_null.finemap_regions_res.RDS")
+  susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.estimated_parameter.","ctwas_null.finemap_regions_res.RDS")
   f1 <- caliPIP_plot(phenofs, susieIfs, ...) 
   return(f1)
 }
 
 plot_PIP_susie <- function(results_dir, runtag,  simutags, ...){
   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-  susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.true_parameter.","susie_null.finemap_regions_res.RDS")
+  susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.estimated_parameter.","susie_null.finemap_regions_res.RDS")
   f1 <- caliPIP_plot(phenofs, susieIfs, ...) 
   return(f1)
 }
 
 plot_PIP_ctwas_csindex <- function(results_dir, runtag,  simutags, ...){
   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-  susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.true_parameter.","ctwas_null.finemap_regions_res.RDS")
+  susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.estimated_parameter.","ctwas_null.finemap_regions_res.RDS")
   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
   return(f1)
 }
 
 plot_PIP_susie_csindex <- function(results_dir, runtag,  simutags, ...){
   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-  susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.true_parameter.","susie_null.finemap_regions_res.RDS")
+  susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.estimated_parameter.","susie_null.finemap_regions_res.RDS")
   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
   return(f1)
 }
