--- a/analysis/simulation_param_PIPs.Rmd
+++ b/analysis/simulation_param_PIPs.Rmd
@@ -91,6 +91,8 @@ plot_enrichment <- function(results_dir,runtag,thins,group_prior_var_structures,
 }
 ```
 
+## Enrichment=40
+### Prior Inclusion Probability
 ```{r,echo=FALSE,fig.width= 16, fig.height= 8}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
 runtag = "four_tissues"
@@ -102,6 +104,7 @@ true_value <- 0.01
 plot_prior_inclusion(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
 ```
 
+### Prior Variance
 ```{r,echo=FALSE,fig.width= 16, fig.height= 8}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
 runtag = "four_tissues"
@@ -113,6 +116,7 @@ true_value <- 10
 plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
 ```
 
+### PVE
 ```{r,echo=FALSE,fig.width= 16, fig.height= 8}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
 runtag = "four_tissues"
@@ -124,6 +128,7 @@ true_value <- 0.02
 plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
 ```
 
+### Enrichment
 ```{r,echo=FALSE,fig.width= 16, fig.height= 8}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
 runtag = "four_tissues"
