--- a/analysis/simulation_param_PIPs.Rmd
+++ b/analysis/simulation_param_PIPs.Rmd
@@ -91,8 +91,7 @@ plot_enrichment <- function(results_dir,runtag,thins,group_prior_var_structures,
 }
 ```
 
-## Enrichment=40
-### Prior Inclusion Probability
+## Enrichment=10
 ```{r,echo=FALSE,fig.width= 16, fig.height= 8}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
 runtag = "four_tissues"
@@ -100,35 +99,32 @@ simutags <- paste(2, 1:5, sep = "-")
 thins <- c(0.1,1)
 group_prior_var_structures <- c("shared_all","shared_type")
 null_methods <- c("ctwas","susie")
-true_value <- 0.01
+```
+### Prior Inclusion Probability
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+true_value <- 0.0025
 plot_prior_inclusion(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
 ```
 
 ### Prior Variance
 ```{r,echo=FALSE,fig.width= 16, fig.height= 8}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
-runtag = "four_tissues"
-simutags <- paste(2, 1:5, sep = "-")
-thins <- c(0.1,1)
-group_prior_var_structures <- c("shared_all","shared_type")
-null_methods <- c("ctwas","susie")
 true_value <- 10
 plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
 ```
 
 ### PVE
 ```{r,echo=FALSE,fig.width= 16, fig.height= 8}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
-runtag = "four_tissues"
-simutags <- paste(2, 1:5, sep = "-")
-thins <- c(0.1,1)
-group_prior_var_structures <- c("shared_all","shared_type")
-null_methods <- c("ctwas","susie")
-true_value <- 0.02
+true_value <- 0.005
 plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
 ```
 
 ### Enrichment
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+true_value <- 10
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
+```
+
+## Enrichment=40
 ```{r,echo=FALSE,fig.width= 16, fig.height= 8}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
 runtag = "four_tissues"
@@ -136,6 +132,60 @@ simutags <- paste(2, 1:5, sep = "-")
 thins <- c(0.1,1)
 group_prior_var_structures <- c("shared_all","shared_type")
 null_methods <- c("ctwas","susie")
+```
+### Prior Inclusion Probability
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+true_value <- 0.01
+plot_prior_inclusion(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
+```
+
+### Prior Variance
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+true_value <- 10
+plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
+```
+
+### PVE
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+true_value <- 0.02
+plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
+```
+
+### Enrichment
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
 true_value <- 40
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
+```
+
+## Enrichment=80
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
+runtag = "four_tissues"
+simutags <- paste(3, 1:5, sep = "-")
+thins <- c(0.1,1)
+group_prior_var_structures <- c("shared_all","shared_type")
+null_methods <- c("ctwas","susie")
+```
+### Prior Inclusion Probability
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+true_value <- 0.02
+plot_prior_inclusion(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
+```
+
+### Prior Variance
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+true_value <- 10
+plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
+```
+
+### PVE
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+true_value <- 0.04
+plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
+```
+
+### Enrichment
+```{r,echo=FALSE,fig.width= 16, fig.height= 8}
+true_value <- 80
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value)
 ```
