--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -64,8 +64,9 @@ Package V2.0
 
   * [Deciding the matching tissue -- by gene numbers](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue_v2.html)
   * [Deciding the matching tissue -- %h2g adaptive method](https://sq-96.github.io/multigroup_ctwas_analysis/tissue_selection_extra_tissue.html)
-  * [Deciding the matching tissue -- run ctwas using all tissues](https://sq-96.github.io/multigroup_ctwas_analysis/real_data_all_tissues.html)
-  * [Deciding the matching tissue -- run ctwas using all tissues](https://sq-96.github.io/multigroup_ctwas_analysis/GWAS_tissue_selection.html)
+  * [Deciding the matching tissue -- run ctwas using all tissues, round1](https://sq-96.github.io/multigroup_ctwas_analysis/real_data_all_tissues.html)
+  * [Deciding the matching tissue -- run ctwas using all tissues, G-tests](https://sq-96.github.io/multigroup_ctwas_analysis/GWAS_tissue_selection.html)
+  * [Deciding the matching tissue -- run ctwas using all tissues, G-tests, scatter plots added](https://sq-96.github.io/multigroup_ctwas_analysis/GWAS_tissue_selection_V2.html)
 
 ### Multi-tissue 
 
